bin_SCRIPTS=importserver.py importcli.py copy_sstable.py dispatch.sh mrsstable.jar

conf_DATA=importserver.conf.template importcli.conf.template ctl_data.ini ctl_data.txt
confdir=${prefix}/etc

EXTRA_DIST = \
        importserver.py \
        importserver.conf.template \
        importcli.py \
        importcli.conf.template \
        copy_sstable.py \
        dispatch.sh \
        mrsstable.jar \
        ctl_data.ini \
        ctl_data.txt
 
